@@ -326,8 +326,7 @@ source package control files.
 Take into account that these user-defined fields will be using the global
 namespace, which might at some point in the future collide with officially
 recognized fields. To avoid such potential situation you can prefix those
-fields with \fBPrivate\-\fP, such as \fBXB\-Private\-New\-Field\fP, which as
-a side effect will make \fBdpkg\-deb\fP not warn on them as unknown fields.
+fields with \fBPrivate\-\fP, such as \fBXB\-Private\-New\-Field\fP.
 
 .SH EXAMPLE
 .\" .RS
