@@ -21,6 +21,7 @@ dpkg (1.17.14) UNRELEASED; urgency=low
     either empty or '-'.
   * Fix order of Files field on generated .changes file in dpkg-genchanges.
     Regression introduced in dpkg 1.17.7.
+  * Stop warning on unknown arbitrary fields from dpkg-deb.
 
   [ Raphaël Hertzog ]
   * Explain better in deb-triggers(5) why interest/activate-noawait should be
